Fix iOS Safari scroll jump caused by toolbar resize triggering ScrollTrigger.refresh()

--- a/css/queerassfolk.webflow.css
+++ b/css/queerassfolk.webflow.css
@@ -127,7 +127,7 @@ label {
 
 .sec.footer {
   background-color: var(--primary);
-  min-height: 101vh;
+  min-height: 101svh;
   padding-top: 7.25rem;
   padding-bottom: 3rem;
 }
